SSCS_WA_1_5 DTSAM-506 add IBCA mapping rule (#2084)
* DTSAM-506 add IBCA mapping rule

* DTSAM-506 update 'listed-hearing-viewer' mapping

* DTSAM-506 update rule names to match flag version

* DTSAM-506 update `listed-hearing-viewer` unit test

* DTSAM-506 update `listed-hearing-viewer` drl logic

---------

Co-authored-by: Matt Nayler <57350764+mattnayler@users.noreply.github.com>
Co-authored-by: mikebrownccd <104495891+mikebrownccd@users.noreply.github.com>