@@ -6,7 +6,6 @@ import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.runner.RunWith;
 import org.mockito.junit.MockitoJUnitRunner;
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.CaseWorkerAccessProfile;
-import uk.gov.hmcts.reform.orgrolemapping.domain.model.FeatureFlag;
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.RoleAssignment;
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.GrantType;
 import uk.gov.hmcts.reform.orgrolemapping.helper.RoleAssignmentAssertHelper.MultiRegion;
@@ -15,7 +14,6 @@ import uk.gov.hmcts.reform.orgrolemapping.helper.UserAccessProfileBuilder;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.arrayContainingInAnyOrder;
@@ -423,8 +421,9 @@ class DroolSscsStaffOrgRolesTest extends DroolBase {
 
     @ParameterizedTest
     @CsvSource({
-        "14,BBA3,'dwp',N,N",
-        "15,BBA3,'hmrc',N,N"
+        "14,BBA3,'dwp,listed-hearing-viewer',N,N",
+        "15,BBA3,'hmrc,listed-hearing-viewer',N,N",
+        "19,BBA3,'ibca,listed-hearing-viewer',N,N"
     })
     void shouldReturnSscsOtherGovDepMappings(String roleId, String serviceCode, String expectedRoles,
                                              String taskSupervisorFlag, String caseAllocatorFlag) {
@@ -441,16 +440,17 @@ class DroolSscsStaffOrgRolesTest extends DroolBase {
         cap.setRegionId("LDN");
         cap.setSkillCodes(skillCodes);
 
+        allProfiles.clear();
         allProfiles.add(cap);
 
         //Execute Kie session
         List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(setFeatureFlags());
+                buildExecuteKieSession(getAllFeatureFlagsToggleByJurisdiction("SSCS", true));
 
         //assertion
         assertFalse(roleAssignments.isEmpty());
         assertEquals(expectedRoles.split(",").length, roleAssignments.size());
-        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
+        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).toList(),
                 containsInAnyOrder(expectedRoles.split(",")));
         roleAssignments.forEach(r -> {
             assertEquals("OTHER_GOV_DEPT", r.getRoleCategory().toString());
@@ -465,11 +465,7 @@ class DroolSscsStaffOrgRolesTest extends DroolBase {
             assertNull(r.getAttributes().get("region"));
 
             //assert work types
-            if (("dwp").equals(r.getRoleName())) {
-                assertThat(r.getAttributes().get("workTypes").asText().split(","),
-                        arrayContainingInAnyOrder("applications", "hearing_work",
-                                "routine_work", "priority", "pre_hearing"));
-            } else if (("hmrc").equals(r.getRoleName())) {
+            if (List.of("dwp", "hmrc", "ibca").contains(r.getRoleName())) {
                 assertThat(r.getAttributes().get("workTypes").asText().split(","),
                         arrayContainingInAnyOrder("applications", "hearing_work",
                                 "routine_work", "priority", "pre_hearing"));
@@ -501,8 +497,4 @@ class DroolSscsStaffOrgRolesTest extends DroolBase {
         assertTrue(roleAssignments.isEmpty());
     }
 
-    private static List<FeatureFlag> setFeatureFlags() {
-        return List.of(FeatureFlag.builder().flagName("sscs_wa_1_0").status(true).build(),
-                FeatureFlag.builder().flagName("sscs_wa_1_2").status(true).build());
-    }
 }
